--- a/src/VisualStudioExtension/VisualStudioExtension.csproj
+++ b/src/VisualStudioExtension/VisualStudioExtension.csproj
@@ -20,6 +20,10 @@
     <DefaultLanguage>en-US</DefaultLanguage>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>0.0.1</Version>
+  </PropertyGroup>
+  
   <ItemGroup>
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -37,8 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CmdPal.Extensions.SDK" Version="0.0.2" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
+    <PackageReference Include="Microsoft.CmdPal.Extensions.SDK" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Platform)' == 'x64'">
