--- a/src/VisualStudioExtension/VisualStudioExtension.csproj
+++ b/src/VisualStudioExtension/VisualStudioExtension.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CmdPal.Extensions.SDK" />
+    <PackageReference Include="Microsoft.CommandPalette.Extensions" />
     <PackageReference Include="Microsoft.WindowsAppSDK" />
   </ItemGroup>
 
