logging, notice.md, bumped libs and localization

--- a/src/VisualStudioExtension/VisualStudioExtension.csproj
+++ b/src/VisualStudioExtension/VisualStudioExtension.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CommandPalette.Extensions" />
     <PackageReference Include="Microsoft.WindowsAppSDK" />
+    <PackageReference Include="Serilog" />
+    <PackageReference Include="Serilog.Sinks.File" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Platform)' == 'x64'">
